--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="box">
             <img src="assets/img/edukasi7.jpg" alt="" />
-            <h3>Pilah Sampah Organik&Non Organik</h3>
+            <h3>Pilah Sampah Non dan Organik</h3>
             <p>Sampah merupakan masalah lingkungan yang semakin menjadi. . .</p>
             <button><a href="artikel7.html">Detail</a></button>
           </div>
