--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="box">
             <img src="assets/img/edukasi2.jpg" alt="" />
             <h3>Giat Melakukan Reboisasi</h3>
-            <p>Semakin banyak orang yang membuang sampah di tempat yang tidak semestinya . . .</p>
+            <p>Semakin banyak orang yang membuang sampah di tempat yang . . .</p>
             <button><a href="artikel2.html">Detail</a></button>
           </div>
           <div class="box">
@@ -120,7 +120,7 @@
           <div class="box">
             <img src="assets/img/edukasi8.jpeg" alt="" />
             <h3>Sulap Botol Kaca Menjadi Vas Bunga</h3>
-            <p>Botol kaca adalah salah satu jenis sampah yang sering. . .</p>
+            <p>Botol kaca adalah salah satu jenis. . .</p>
             <button><a href="artikel8.html">Detail</a></button>
           </div>
         </div>
