tambah box artikel

--- a/index.html
+++ b/index.html
@@ -136,38 +136,50 @@
         <div class="box-artikel">
           <div class="box">
             <img src="assets/img/edukasi1.jpg" alt="" />
-            <h3>Tips Mengurangi Sampah Sehari-hari</h3>
-            <p>Kehidupan sehari - hari kamu pasti tidak luput dari penggunaan sampah . . .</p>
+            <h3>engurangi Sampah Sehari-hari</h3>
+            <p>Semakin banyak orang yang membuang sampah . . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
             <img src="assets/img/edukasi2.jpg" alt="" />
             <h3>Giat Melakukan Reboisasi</h3>
-            <p>Gerakan GPRM ( Gerakan Penghijauan dan Reboisasi ) dilaksanakan serentak . . .</p>
+            <p>Semakin banyak orang yang membuang sanpah di tenpat yang . . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
             <img src="assets/img/edukasi3.jpg" alt="" />
             <h3>Olah Sampah Plastik jadi Bata</h3>
-            <p>Badan Lingkungan Hidup Kota Yogyakarta mengembangkan pengolahan . . .</p>
+            <p>Sampah plastik yang tidak terkelola dengan baik akan merusak . . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
             <img src="assets/img/edukasi4.jpg" alt="" />
-            <h3>Mari Pilah Sampah Sebelum Dibuang</h3>
-            <p>apa itu pilah sampah? Pilah sampah adalah memisahkan . . .</p>
+            <h3>Pilah Sampah Sebelum Dibuang</h3>
+            <p>Semakin banyak orang yang membuang sampah di tempat yang tidak . . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
             <img src="assets/img/edukasi5.jpg" alt="" />
             <h3>Sulap Limbah Plastik jadi BBM</h3>
-            <p>mekanisme konversi sampah plastik menjadi BBM adalah dengan . . .</p>
+            <p>Limbah plastik adalah salah satu masalah lingkungan yang sering . . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
             <img src="assets/img/edukasi6.jpg" alt="" />
-            <h3>Limbah Plastik Menjadi Paving Block</h3>
+            <h3>Limbah Plastik Menjadi Paving</h3>
             <p>Melalui platform industri yang diberi nama Rebricks, dua perempuan asal. . .</p>
+            <button>Detail</button>
+          </div>
+          <div class="box">
+            <img src="assets/img/edukasi7.jpg" alt="" />
+            <h3>Pilah Sampah Non dan Organik</h3>
+            <p>Sampah merupakan masalah lingkungan yang semakin menjadi. . .</p>
+            <button>Detail</button>
+          </div>
+          <div class="box">
+            <img src="assets/img/edukasi8.jpeg" alt="" />
+            <h3>Sulap Botol Kaca Menjadi Vas Bunga</h3>
+            <p>Botol Kaca adalah salah satu jenis. . .</p>
             <button>Detail</button>
           </div>
         </div>
