--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="box">
             <img src="assets/img/edukasi6.jpg" alt="" />
             <h3>Limbah Plastik Menjadi Paving</h3>
-            <p>Melalui platform industri yang diberi nama Rebricks, dua perempuan asal. . .</p>
+            <p>Limbah plastik merupakan masalah besar yang. . .</p>
             <button><a href="artikel6.html">Detail</a></button>
           </div>
           <div class="box">
