--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="box">
             <img src="assets/img/edukasi6.jpg" alt="" />
             <h3>Limbah Plastik Menjadi Paving</h3>
-            <p>Melalui platform industri yang diberi nama Rebricks, dua perempuan asal. . .</p>
+            <p>Limbah plastik merupakan masalah besar yang. . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
