--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="box-artikel">
           <div class="box">
             <img src="assets/img/edukasi1.jpg" alt="" />
-            <h3>engurangi Sampah Sehari-hari</h3>
+            <h3>Mengurangi Sampah Sehari-hari</h3>
             <p>Semakin banyak orang yang membuang sampah . . .</p>
             <button>Detail</button>
           </div>
