--- a/login/index.html
+++ b/login/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="d-grid mt-5">
-                <button type="submit" class="btn btn-success btn-login btn-secondary">Login</button>
+                <button type="submit" class="btn btn-success btn-login btn-secondary" id="login-btn">Login</button>
             </div>
 
             <div class="mt-3">
@@ -64,6 +64,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
