--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
+    integrity="sha512-/pCfoXalM3ByuBY05OjJymwVQVq7ZDnVdO4vu5FR5c/RPly3+Jq2Rmp0kkOjldvoOP3JLjQmeU5zZMJehQz+w==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" 
+  />
 
     <!-- Font Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
