--- a/artikel6.html
+++ b/artikel6.html
@@ -31,7 +31,7 @@
         <div class="container">
           <div class="box-navbar">
             <div class="logo">
-              <h1>E - Vira</h1>
+              <h1>ElVira</h1>
             </div>
             <ul class="menu">
               <li><a href="index.html">Home</a></li>
@@ -139,31 +139,57 @@
       </div>
       <!-- Artikel Populer -->    
 
-    <!-- Footer -->
-    <footer>
-    <div class="footer">
-      <div class="container">
-        <div class="box-footer">
-          <div class="box">
-            <h2>About</h2>
-            <p>E-Vira adalah sebuah platfrom pengaduan tindak pelanggaran lingkungan yang terjadi disekitar kamu,
-               platform ini memudahkan dinas lingkungan hidup dalam menangani permasalahan yang terjadi di wilayah kamu
-            </p>
-          </div>
-          <div class="box">
-            <h3>Menu</h3>
-            <a href="#home">Home</a>
-            <a href="#pengaduan">Pengaduan</a>
-            <a href="#services">Services</a>
-            <a href="#artikel">Artikel</a>
-            <a href="#contact">contact</a>
-          </div>
-          <div class="box">
-            <p>&copy; Copyright by <span>Environment New Era</span> All Rights Reserved 2023</p>
-          </div>
-        </div>
+     <!-- Footer -->
+     <footer class="footer-distributed">
+
+      <div class="footer-left">
+          <h3>El<span>Vira</span></h3>
+
+          <p class="footer-links">
+              <a href="#home">Home</a>
+              |
+              <a href="#pengaduan">Pengaduan</a>
+              |
+              <a href="#services">Services</a>
+              |
+              <a href="#artikel">Artikel</a>
+              |
+              <a href="#contact">Contact</a>
+          </p>
+
+          <p class="footer-company-name">Copyright © 2023 <strong>Elvira</strong> All rights reserved</p>
       </div>
-    </div>
+
+      <div class="footer-center">
+          <div>
+              <i class="fa fa-map-marker"></i>
+              <p><span>Semarang</span>
+                  Indonesia</p>
+          </div>
+
+          <div>
+              <i class="fa fa-phone"></i>
+              <p>(0293)345-567</p>
+          </div>
+          <div>
+              <i class="fa fa-envelope"></i>
+              <p><a href="https://mail.google.com/mail/">Elvira01@gmail.com</a></p>
+          </div>
+      </div>
+      <div class="footer-right">
+          <p class="footer-company-about">
+              <span>About Elvira</span>
+              <strong>ElVira</strong> adalah singkatan dari Elektronik Environment New Era, sebuah platfrom pengaduan tindak pelanggaran lingkungan yang terjadi disekitar kamu,
+              platform ini memudahkan dinas lingkungan hidup dalam menangani permasalahan yang terjadi di wilayah kamu
+          </p>
+          <div class="footer-icons">
+              <a href="https://id-id.facebook.com/"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/?hl=id"><i class="fa fa-instagram"></i></a>
+              <a href="https://id.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://twitter.com/login?lang=id"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.youtube.com/?gl=ID&hl=id"><i class="fa fa-youtube"></i></a>
+          </div>
+      </div>
     </footer>
     <!-- Footer -->
 
