--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 Dimulai dari Diri Sendiri 
               </h1>
               <p id="description">Adukan segala pelanggaran lingkungan di sekitar lingkungan kamu</p>
-              <button><a id="link" href="https://skilvul.com" style="text-decoration: none; color: #ffff;">Selengkapnya</a></button>
+              <button><a id="link" href="#artikel" style="text-decoration: none; color: #ffff;">Selengkapnya</a></button>
             </div>
             <div class="box">
               <img src="assets/img/hero2.png" alt="Hero2">
