--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="box">
             <img src="assets/img/edukasi7.jpg" alt="" />
             <h3>Pilah Sampah Non dan Organik</h3>
-            <p>Sampah merupakan masalah lingkungan yang semakin. . .</p>
+            <p>Sampah merupakan masalah lingkungan yang . . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
