--- a/Register/register.html
+++ b/Register/register.html
@@ -47,7 +47,7 @@
         <form>
         <div class="mb-4">
             <label for="exampleInputUsername1" class="form-label">Username</label>
-            <input type="username" class="form-control" id="exampleInputEUsername1" aria-describedby="usernameHelp" placeholder="Username"/>
+            <input type="username" class="form-control" id="exampleInputUsername1" aria-describedby="usernameHelp" placeholder="Username"/>
         </div>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email</label>
@@ -89,7 +89,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
+    <script src="register.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
