--- a/index.html
+++ b/index.html
@@ -174,19 +174,19 @@
           <div class="box">
             <img src="assets/img/edukasi6.jpg" alt="" />
             <h3>Limbah Plastik Menjadi Paving</h3>
-            <p>Limbah plastik merupakan masalah besar yang. . .</p>
+            <p>Limbah plastik merupakan masalah besar yang mempengaruhi . . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
             <img src="assets/img/edukasi7.jpg" alt="" />
             <h3>Pilah Sampah Non dan Organik</h3>
-            <p>Sampah merupakan masalah lingkungan yang . . .</p>
+            <p>Sampah merupakan masalah lingkungan yang semakin menjadi - jadi . . .</p>
             <button>Detail</button>
           </div>
           <div class="box">
             <img src="assets/img/edukasi8.jpeg" alt="" />
             <h3>Sulap Botol Kaca Menjadi Vas Bunga</h3>
-            <p>Botol Kaca adalah salah satu jenis. . .</p>
+            <p>Botol Kaca adalah salah satu jenis sampah yang sering ditemukan . . .</p>
             <button>Detail</button>
           </div>
         </div>
