--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Landing Page E-Vira</title>
+    <title>Elvira</title>
   </head>
   <body>
     <header>
