edit username dan navbar

--- a/login/index.html
+++ b/login/index.html
@@ -12,6 +12,27 @@
   </head>
   
   <body>
+    <nav>
+      <div class="navbar">
+          <div class="container-navbar">
+              <div class="box-navbar">
+                  <div class="logo">
+                  <h1>ElVIRA</h1>
+                  </div>
+                  <ul class="menu">
+                      <li><a href="#home">Home</a></li>
+                      <li><a href="#pengaduan">Pengaduan</a></li>
+                      <li><a href="#services">Services</a></li>
+                      <li><a href="#artikel">Artikel</a></li>
+                      <li><a href="#contact">Contact</a></li>
+                      <li class="active"><a href="#daftar">Daftar</a></li>
+                  </ul>
+                  <i class="fa-solid fa-bars menu-bar"></i>
+              </div>
+          </div>
+      </div>
+  </nav>
+
     <div class="container">
       <div class="card login-form">
         <div class="card-body">
@@ -24,8 +45,8 @@
 
           <form>
             <div class="mb-4">
-              <label for="exampleInputEmail1" class="form-label">Email*</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email"/>
+              <label for="exampleInputUsername1" class="form-label">Username</label>
+              <input type="username" class="form-control" id="exampleInputUsername1" aria-describedby="usernameHelp" placeholder="Username"/>
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password*</label>
