--- a/Register/login/login.html
+++ b/Register/login/login.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="login.css" />
     <title>Form Login</title>
   </head>
   
@@ -25,7 +25,7 @@
                       <li><a href="#services">Services</a></li>
                       <li><a href="#artikel">Artikel</a></li>
                       <li><a href="#contact">Contact</a></li>
-                      <li class="active"><a href="#daftar">Daftar</a></li>
+                      <li class="active"><a href="#daftar">Daftar</a></li> 
                   </ul>
                   <i class="fa-solid fa-bars menu-bar"></i>
               </div>
@@ -65,11 +65,12 @@
             </div>
 
             <div class="d-grid mt-5">
-                <button type="submit" class="btn btn-success btn-login btn-secondary" id="login-btn">Login</button>
+                <button type="submit" class="btn btn-success btn-login btn-secondary" id="login-btn"><a href="index.html">Login</a></button> <label>Already have an account? </label>
+                
             </div>
 
             <div class="mt-3">
-                <label>Not registered yet? <a href="#" class="link">Create account</a></label>
+                <label>Not registered yet? <a href="#" class="link">Create account</a></label> 
             </div>
         </form>
 
@@ -85,7 +86,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
+    <script src="login.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
