--- a/Register/register.html
+++ b/Register/register.html
@@ -74,7 +74,7 @@
         </div>
 
         <div class="mt-3">
-            <label>Already have an account? <a href="#" class="link">Login</a></label>
+            <label>Already have an account? <a href="login/login.html" class="active">Login</a></label>
         </div>
 
         </form>
