--- a/index.html
+++ b/index.html
@@ -107,6 +107,30 @@
     </div>
     <!-- Pengaduan -->
 
+        <!-- Services -->
+        <div class="services" id="services">
+          <div class="container">
+            <div class="box-services">
+              <div class="box">
+                <i class="fa-solid fa-coins"></i>
+                <h4>Gratis Pengaduan</h4>
+                <p>Segala pengaduan yang dilaporkan tidak dipungut biaya</p>
+              </div>
+              <div class="box">
+                <i class="fa-solid fa-certificate"></i>
+                <h4>Pelayanan 24 Jam</h4>
+                <p>Pengaduan dapat dilakukan dimana saja dan kapan saja</p>
+              </div>
+              <div class="box">
+                <i class="fa-solid fa-people-roof"></i>
+                <h4>Cepat & Tanggap</h4>
+                <p>Dinas terkait akan segera melakukan peninjauan ke lokasi</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Services -->
+
     <!-- Paragraf -->
     <h1 class="paragraf">
       Kumpulan Artikel Lingkungan Yang Bisa Anda Baca
