--- a/artikel7.html
+++ b/artikel7.html
@@ -39,7 +39,7 @@
               <li><a href="index.html">Services</a></li>
               <li><a href="index.html">Artikel</a></li>
               <li><a href="index.html">Contact</a></li>
-              <li class="active"><a href="#daftar">Daftar</a></li>
+              <li class="active"><a href="register.html">Daftar</a></li>
             </ul>
             <i class="fa-solid fa-bars menu-bar"></i>
           </div>
@@ -108,7 +108,7 @@
           <div class="box-artikel">
             <div class="box">
               <img src="assets/img/edukasi1.jpg" alt="" />
-              <h3>Tips Mengurangi Sampah Sehari-hari</h3>
+              <h3>Mengurangi Sampah Sehari-hari</h3>
               <p>Kehidupan sehari - hari kamu pasti tidak luput dari penggunaan sampah . . .</p>
               <button><a href="artikel1.html">Detail</a></button>
             </div>
