--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <li><a href="#services">Services</a></li>
               <li><a href="#artikel">Artikel</a></li>
               <li><a href="#contact">Contact</a></li>
-              <li class="active"><a href="#daftar">Daftar</a></li>
+              <li class="active"><a href="register.html">Daftar</a></li>
             </ul>
             <i class="fa-solid fa-bars menu-bar"></i>
           </div>
