--- a/register.html
+++ b/register.html
@@ -89,7 +89,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="register.js"></script>
+    <script src="js/register.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
